--- a/ArcsSystem/templates/publications/article_publications_list.html
+++ b/ArcsSystem/templates/publications/article_publications_list.html
@@ -6,6 +6,9 @@
 {% block content %}
 
 
+<h1> {% trans "Search our resources" %}</h1>
+
+
 <form action="search" method="get">
   <input name="q" type="text" placeholder="Search...">
 </form>
