--- a/ArcsSystem/templates/staticpages/staticpage.html
+++ b/ArcsSystem/templates/staticpages/staticpage.html
@@ -5,12 +5,12 @@
 
 {# this tag will insert a comment in the HMTL, but won't be rendered #}
 
-
+{% autoescape off %}
 
 <h1>{{ object.title }}</h1>
 
 <p> {{ object.content }} </p>
-
+{% endautoescape %}
 
 
 {% endblock content %}
