--- a/ArcsSystem/templates/staticpages/staticpage.html
+++ b/ArcsSystem/templates/staticpages/staticpage.html
@@ -5,11 +5,11 @@
 
 {# this tag will insert a comment in the HMTL, but won't be rendered #}
 
-{% autoescape off %}
+{% autoescape off %} <!-- This makes Summernote possible -->
 
 <h1>{{ object.title }}</h1>
-
 <p> {{ object.content }} </p>
+
 {% endautoescape %}
 
 
