--- a/ArcsSystem/static/css/base-style.css
+++ b/ArcsSystem/static/css/base-style.css
@@ -139,3 +139,42 @@ body {
     padding-bottom: 8px;
     border-top: 1px solid;
 }
+
+.text-header-style {
+    font-weight: : bold !important;
+    font-family: Playfair;
+    font-size: 25px;
+}
+
+.text-style{
+    font-family: Playfair;
+    font-size: 15px;
+}
+
+.greenish-brown-color{
+    background-color: #9FB0A0;
+}
+
+.greenish-brown-color-bottom-sytyle{
+    background-color: #9FB0A0;
+    font-family: Lato;
+    font-weight: bold;
+    font-size: 12px;
+}
+
+.green-brown-color-bottom-sytyle{
+    background-color: #255C61;
+    font-family: Lato;
+    font-weight: bold;
+    font-size: 12px;
+    color: #FFFFFF;
+}
+
+.light-green-style{
+    background-color: #d2e1df;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    margin-left: 30px;
+    margin-right: 30px;
+    padding: 10px;
+}
