--- a/ArcsSystem/templates/staticpages/main-page.html
+++ b/ArcsSystem/templates/staticpages/main-page.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% load i18n %}
+{% load publications_extras %} <!-- for publications dynamic box -->
 
 {% block title %}Home{% endblock title %}
 
@@ -89,7 +90,12 @@
             </div>
         </div>
         <div class="col light-green-style">
-            <h2 class="font-weight-bold text-header-style"> Paper </h2>
+            <h2 class="font-weight-bold text-header-style">Recent papers </h2>
+
+                 {% for q in "citizen"|query_publications %}
+                 <p><a href="{% url 'publications:article_publications_detail' q.id %}">{{q}}</a></p>
+                 {% endfor %}
+
         </div>
         <div class="col light-green-style">
             <h2 class="font-weight-bold text-header-style"> CitSciSE Community </h2>
