--- a/ArcsSystem/templates/staticpages/main-page.html
+++ b/ArcsSystem/templates/staticpages/main-page.html
@@ -19,8 +19,8 @@
             <div class="row">
                 <div class="col">
                     <br>
-                    <h2 class="font-weight-bold text-header-style">Welcome</h2>
-                    <p class="text-justify text-style"> Welcome to medborgarforskning.se – Sweden's portal for persons interested in learning about citizen science and how to get started in Sweden as well as those who have been involved for years. While this site uses the term citizen science it is more than this term. Citizen science is about researchers and the public cooperating to develop new knowledge. At medborgarforskning.se anyone who wants to learn more about citizen science can search for projects to participate in and contribute to the portal with their own knowledge and experience.<br><br> As a researcher, you can find information about the methodology of citizen science, get tips and inspiration to start your own projects, exchange experiences and make connections with other researchers and volunteers.You can also post your projects on the portal to reach different target groups.<br><br> If you're not a researcher, you can do exactly the same things as the researchers. Citizen science is for everyone.
+                    <h2 class="font-weight-bold text-header-style">{% trans "Welcome" %}</h2>
+                    <p class="text-justify text-style">{% trans  "Welcome to medborgarforskning.se – Sweden's portal for persons interested in learning about citizen science and how to get started in Sweden as well as those who have been involved for years. While this site uses the term citizen science it is more than this term. Citizen science is about researchers and the public cooperating to develop new knowledge. At medborgarforskning.se anyone who wants to learn more about citizen science can search for projects to participate in and contribute to the portal with their own knowledge and experience.<br><br> As a researcher, you can find information about the methodology of citizen science, get tips and inspiration to start your own projects, exchange experiences and make connections with other researchers and volunteers.You can also post your projects on the portal to reach different target groups.<br><br> If you're not a researcher, you can do exactly the same things as the researchers. Citizen science is for everyone." %}
                     </p>
                 </div>
             </div>
@@ -28,8 +28,8 @@
         <div class="col">
             <div class="row">
                 <div class="col">
-                    <h2 class="font-weight-bold text-header-style">Projects parts</h2>
-                    <p class="text-justify text-style"> The database at medborgarforskning.se contains citizen science projects and activities from Sweden that are available for participation. This includes both Swedish and international initiatives. You can use filters to search and sort among the projects to find, for example, projects that deal with a specific topic (e.g. birds or health), take place in specific locations (eg outdoors in nature or in cities), or aimed at different participants (e.g. children or adults). On the project pages you will find more information about what is involved as well as contact information for the organizer. <p>
+                    <h2 class="font-weight-bold text-header-style">{% trans "Projects parts" %}</h2>
+                    <p class="text-justify text-style"> {% trans "The database at medborgarforskning.se contains citizen science projects and activities from Sweden that are available for participation. This includes both Swedish and international initiatives. You can use filters to search and sort among the projects to find, for example, projects that deal with a specific topic (e.g. birds or health), take place in specific locations (eg outdoors in nature or in cities), or aimed at different participants (e.g. children or adults). On the project pages you will find more information about what is involved as well as contact information for the organizer." %} <p>
                 </div>
             </div>
             <div class="row">
@@ -53,11 +53,11 @@
                       </div>
                       <a class="carousel-control-prev" href="#carouselExampleSlidesOnly" role="button" data-slide="prev">
                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                           <span class="sr-only">Previous</span>
+                           <span class="sr-only">{% trans "Previous" %}</span>
                          </a>
                          <a class="carousel-control-next" href="#carouselExampleSlidesOnly" role="button" data-slide="next">
                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                           <span class="sr-only">Next</span>
+                           <span class="sr-only">{% trans "Next" %}</span>
                          </a>
                     </div>
                 </div>
@@ -66,31 +66,31 @@
     </div>
     <div class="row greenish-brown-color d-flex justify-content-center align-items-center">
         <div class="col-4">
-            <h2 class="font-weight-bold text-header-style" >Get involved with CitSciSE</h2>
+            <h2 class="font-weight-bold text-header-style" >{% trans "Get involved with CitSciSE" %}</h2>
         </div>
         <div class="col-8">
-            <p class="text-justify text-style">If you would like to improve the content on CitSciSE or would like to learn more about how to integrate with CitSciSE. Please see our contact information below and the API for accessing the site's content.</p>
+            <p class="text-justify text-style">{% trans "If you would like to improve the content on CitSciSE or would like to learn more about how to integrate with CitSciSE. Please see our contact information below and the API for accessing the site's content." %}</p>
         </div>
     </div>
     <div class="row">
         <div class="col light-green-style">
-            <h3 class="font-weight-bold text-header-style"> Data Quality </h3>
-            <h5 class="font-weight-bold">Getting Started</h5>
-            <p class="text-justify text-style"> Some of the first questions in citizen science is can we trust the data and is the data of sufficient quality. Fundamental readings and resources on Data Quality, Data Standards and Technologies have been compiled in the resources to help address your question.</p>
+            <h3 class="font-weight-bold text-header-style"> {% trans "Data Quality" %} </h3>
+            <h5 class="font-weight-bold">{% trans "Getting Started" %}</h5>
+            <p class="text-justify text-style">{% trans "Some of the first questions in citizen science is can we trust the data and is the data of sufficient quality. Fundamental readings and resources on Data Quality, Data Standards and Technologies have been compiled in the resources to help address your question." %}</p>
             <div class="row">
                 <div class="col ">
-                    <button type="button" class="btn btn-block greenish-brown-color-bottom-sytyle">DATA QUALITY THEMES</button>
+                    <button type="button" class="btn btn-block greenish-brown-color-bottom-sytyle">{% trans "DATA QUALITY THEMES" %}</button>
                 </div>
             </div>
             <br>
             <div class="row ">
                 <div class="col">
-                    <button type="button" class="btn btn-block green-brown-color-bottom-sytyle">DATA QUALITY STANDARDS</button>
+                    <button type="button" class="btn btn-block green-brown-color-bottom-sytyle">{% trans "DATA QUALITY STANDARDS" %}</button>
                 </div>
             </div>
         </div>
         <div class="col light-green-style">
-            <h2 class="font-weight-bold text-header-style">Recent papers </h2>
+            <h2 class="font-weight-bold text-header-style">{% trans "Recent papers" %} </h2>
 
                  {% for q in "citizen"|query_publications %}
                  <p><a href="{% url 'publications:article_publications_detail' q.id %}">{{q}}</a></p>
@@ -99,7 +99,7 @@
         </div>
         <div class="col light-green-style">
             <h2 class="font-weight-bold text-header-style"> CitSciSE Community </h2>
-            <h6 class="font-weight-bold"> Recent Blog Post <h6>
+            <h6 class="font-weight-bold">{% trans "Recent Blog Posts" %} <h6>
         </div>
     </div>
 </<div>
