--- a/ArcsSystem/templates/projects/project_detail.html
+++ b/ArcsSystem/templates/projects/project_detail.html
@@ -7,48 +7,48 @@
 {% block content %}
 
 <article>
-  <hgroup>
+  <hgroup class="detail-view">
     <h1>{{ project.name }}</h1>
   </hgroup>
 
-  <picture>
+  <picture class="detail-view">
     {# TODO implement additional web image format handling #}
     <source srcset="name.webp" type="image/webp" alt="{#TODO alt text#}">{#Webp image support first#}
 		<source srcset="name.jpg" type="image/jpg" alt="{#TODO alt text#}">{#jpg support next#}
     <img src="{{ project.image_dir }}" alt="Bild för projektet {{ project.name }}" width="300" height="300"/>
   </picture>
 
-  <div>
+  <div class="detail-view">
     <h2>{% trans "Project information" %}</h2>
   </div>
 
-  <div>
+  <div class="detail-view">
     <h3>{% trans "PROJECT STATUS:" %}</h3>
     <p>{{ project.status }}</p>
   </div>
 
-  <div>
+  <div class="detail-view">
     <h3>{% trans "PROJECT DESCRIPTION:" %}</h3>
     <p>{{ project.description }}</p>
   </div>
 
-  <div>
+  <div class="detail-view">
     <h3>{% trans "PROJECT TARGET AUDIENCE:" %}</h3>
     <p>{{ project.target_audience}}</p>
   </div>
 
-  <div>
+  <div class="detail-view">
       <h3>{% trans "PROJECT RECORD LAST UPDATED:" %}</h3>
       <p>{# TODO Insert last updated field when created in the model #}</p>
   </div>
 
-  <div>
+  <div class="detail-view">
       <h3>{% trans "MEDIA LINKS:" %}</h3>
       <ul>
       </ul>
   </div>
 
-  <div>
+  <div class="detail-view">
     <h2>{% trans "Contact information" %}</h2>
     <h3>{% trans  "NAME:" %} {{ project.contact_name }}</h3>
     <h3>{% trans "CONTACT'S ROLE:" %} {{ project.contact_role }}</h3>
