--- a/ArcsSystem/templates/staticpages/main-page.html
+++ b/ArcsSystem/templates/staticpages/main-page.html
@@ -29,7 +29,7 @@
         <div class="col">
             <div class="row">
                 <div class="col">
-                    <h2 class="font-weight-bold text-header-style">{% trans "Projects parts" %}</h2>
+                    <h2 class="font-weight-bold text-header-style">{% trans "Project database" %}</h2>
                     <p class="text-justify text-style"> {% trans "The database at medborgarforskning.se contains citizen science projects and activities from Sweden that are available for participation. This includes both Swedish and international initiatives. You can use filters to search and sort among the projects to find, for example, projects that deal with a specific topic (e.g. birds or health), take place in specific locations (eg outdoors in nature or in cities), or aimed at different participants (e.g. children or adults). On the project pages you will find more information about what is involved as well as contact information for the organizer." %} <p>
                 </div>
             </div>
