--- a/ArcsSystem/templates/base.html
+++ b/ArcsSystem/templates/base.html
@@ -53,6 +53,19 @@
 					<div class="col">
 						<a href="#">
 							<img class="header-icons" src="{% static 'icons/Language_Icon_4.png' %}"/>
+							<form action="{% url 'set_language' %}" method="post" style="display:inline">{% csrf_token %}
+    						<input name="next" type="hidden" value="{{ redirect_to }}">
+						    <select name="language" onchange="this.form.submit()">
+						        {% get_current_language as LANGUAGE_CODE %}
+						        {% get_available_languages as LANGUAGES %}
+						        {% get_language_info_list for LANGUAGES as languages %}
+						        {% for language in languages %}
+						            <option value="{{ language.code }}"{% if language.code == LANGUAGE_CODE %} selected{% endif %}>
+						                {{ language.name_local }} ({{ language.code }})
+						            </option>
+						        {% endfor %}
+						    </select>
+						</form>
 						</a>
 					</div>
 					<div class="col">
