--- a/ArcsSystem/templates/base.html
+++ b/ArcsSystem/templates/base.html
@@ -6,6 +6,8 @@
 		<meta name="Description" content="{% trans "Medborgarforskning.se - The Swedish portal for citizen science." %}">
 		<!-- TODO Insert django tag for additional page metadata fields -->
 
+		<script src="https://code.jquery.com/jquery-3.5.1.min.js" type="text/javascript"></script>
+		<script src="{% static 'scripts/base.js' %}" type="text/javascript"></script>
 		<link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
 		<!-- TODO Insert django tag for additional scripts for the page-->
 		<!-- Bootstrap CSS -->
@@ -49,11 +51,26 @@
 					<img src="{% static 'icons/medborgarforskning-C-1000px_1.png' %}"/>
 				</div>
 				<div class="col d-flex justify-content-center align-items-center">
-					<div class="row">
+					<div class="row d-flex justify-content-center align-items-center">
 					<div class="col">
-						<a href="#">
-							<img class="header-icons" src="{% static 'icons/Language_Icon_4.png' %}"/>
-						</a>
+						<div class="dropdown">
+							<button class="btn dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+							  <img class="header-icons" src="{% static 'icons/Language_Icon_4.png' %}"/>
+							</button>
+							<div class="dropdown-menu header-main-menu-body" aria-labelledby="dropdownMenuButton">
+								{% get_current_language as LANGUAGE_CODE %}
+								{% get_available_languages as LANGUAGES %}
+								{% get_language_info_list for LANGUAGES as languages %}
+								{% for language in languages %}
+									<a class="dropdown-item change-language-item {% if language.code == LANGUAGE_CODE %}language-selected-color{% endif %}" value="{{ language.code }}" href="#"> {{ language.name_local }}</a>
+								{% endfor %}
+							</div>
+							<form id="form-languages-submit" action="{% url 'set_language' %}" method="post">
+								{% csrf_token %}
+								<input name="next" type="hidden" value="{{ redirect_to }}">
+								<input id="language-input-value" name="language" type="hidden" value="">
+							</form>
+						</div>
 					</div>
 					<div class="col">
 						<a href="#">
@@ -69,19 +86,134 @@
 				</div>
 			</div>
 		</div>
-		<nav class="navbar navbar-expand-lg header-main-menu">
-		  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+		<nav class="navbar navbar-expand-lg  header-main-menu">
+		  <div class="collapse navbar-collapse body" id="navbarSupportedContent">
 			<ul class="navbar-nav mr-auto">
-			  <li class="nav-item active">
-				<a class="nav-link main-menu-buttons" href="#"> GETTING STARTED WITH CITIZEN SCIENCE </a>
+			  <li class="nav-item dropdown active">
+				<a class="nav-link dropdown-toggle font-weight-bold main-menu-buttons-font" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> {% trans "GETTING STARTED WITH CITIZEN SCIENCE" %} </a>
+					<div class="dropdown-menu main-menu-buttons header-main-menu-body" aria-labelledby="navbarDropdown">
+						<a class="dropdown-item font-weight-bold" href="#">What is Citizen Science? </a>
+						<div class="dropdown-divider"></div>
+							<ul>
+								<li class="nav-item dropdown">
+									<a class="dropdown-item" href="#">Swedish Citizen Science </a>
+								</li>
+							</ul>
+						<div class="dropdown-divider"></div>
+						<a class="dropdown-item font-weight-bold" href="#">Case Studies</a>
+						<div class="dropdown-divider"></div>
+						<a class="dropdown-item font-weight-bold" href="#">FAQ</a>
+						<div class="dropdown-divider"></div>
+						<a class="dropdown-item font-weight-bold" href="#">Additional Resources</a>
+						<div class="dropdown-divider"></div>
+					</div>
 			  </li>
-			  <li class="nav-item">
-				<a class="nav-link main-menu-buttons" href="#"> CITIZEN SCIENCE IN PRACTICE </a>
+			  <li class="nav-item dropdown">
+				<a class="nav-link dropdown-toggle font-weight-bold main-menu-buttons-font" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">  {% trans "CITIZEN SCIENCE IN PRACTICE" %} </a>
+					<div class="dropdown-menu main-menu-buttons header-main-menu-body" aria-labelledby="navbarDropdown">
+						<a class="dropdown-item font-weight-bold" href="#">Data Standards and Quality</a>
+						<div class="dropdown-divider"></div>
+						<ul>
+							<li nav-item dropdown>
+								<a class="dropdown-item" href="#">Methods</a>
+							</li>
+							<div class="dropdown-divider"></div>
+							<li nav-item dropdown>
+								<a class="dropdown-item" href="#">Visual of Papers and Themes</a>
+							</li>
+						</ul>
+						<div class="dropdown-divider"></div>
+						<a class="dropdown-item font-weight-bold" href="#">Technology</a>
+						<div class="dropdown-divider"></div>
+							<ul>
+								<li nav-item dropdown>
+									<a class="dropdown-item" href="#">Methods</a>
+								</li>
+								<div class="dropdown-divider"></div>
+								<li nav-item dropdown>
+									<a class="dropdown-item" href="#">Visual of Papers and Themes</a>
+								</li>
+							</ul>
+						<div class="dropdown-divider"></div>
+						<a class="dropdown-item font-weight-bold" href="#">Ethics</a>
+						<div class="dropdown-divider"></div>
+							<ul>
+								<li nav-item dropdown>
+									<a class="dropdown-item" href="#">Methods</a>
+								</li>
+								<div class="dropdown-divider"></div>
+								<li nav-item dropdown>
+									<a class="dropdown-item" href="#">Visual of Papers and Themes</a>
+								</li>
+							</ul>
+						<div class="dropdown-divider"></div>
+						<a class="dropdown-item font-weight-bold" href="#">Communications</a>
+						<div class="dropdown-divider"></div>
+							<ul>
+								<li nav-item dropdown>
+									<a class="dropdown-item" href="#">Methods</a>
+								</li>
+								<div class="dropdown-divider"></div>
+								<li nav-item dropdown>
+									<a class="dropdown-item" href="#">Visual of Papers and Themes</a>
+								</li>
+							</ul>
+						<div class="dropdown-divider"></div>
+				</div>
 			  </li>
-			  <li class="nav-item">
-				<a class="nav-link main-menu-buttons" href="#"> CITIZEN SCIENCE IN SWEDEN </a>
-			  </li>
-			</ul>
+			<li class="nav-item dropdown">
+				<a class="nav-link dropdown-toggle font-weight-bold main-menu-buttons-font" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> {% trans "CITIZEN SCIENCE IN SWEDEN" %} </a>
+				<div class="dropdown-menu main-menu-buttons header-main-menu-body" aria-labelledby="navbarDropdown">
+					<a class="dropdown-item font-weight-bold" href="#">Citizen Science Projects</a>
+					<div class="dropdown-divider"></div>
+						<ul>
+							<li nav-item dropdown>
+								<a class="dropdown-item" href="#">Map of Projects</a>
+							</li>
+							<div class="dropdown-divider"></div>
+							<li nav-item dropdown>
+								<a class="dropdown-item" href="#">Add your Projects</a>
+							</li>
+						</ul>
+					<div class="dropdown-divider"></div>
+					<a class="dropdown-item font-weight-bold" href="#">Predifined List of Projects</a>
+					<div class="dropdown-divider"></div>
+						<ul>
+							<li nav-item dropdown>
+								<a class="dropdown-item" href="#">Funders</a>
+							</li>
+							<div class="dropdown-divider"></div>
+							<li nav-item dropdown>
+								<a class="dropdown-item" href="#">Associated Affiliates</a>
+							</li>
+							<div class="dropdown-divider"></div>
+							<li nav-item dropdown>
+								<a class="dropdown-item" href="#">Reserchers</a>
+							</li>
+						</ul>
+					<div class="dropdown-divider"></div>
+					<a class="dropdown-item font-weight-bold" href="#">Proudacts</a>
+					<div class="dropdown-divider"></div>
+						<ul>
+							<li nav-item dropdown>
+								<a class="dropdown-item" href="#">Papers</a>
+							</li>
+							<div class="dropdown-divider"></div>
+							<li nav-item dropdown>
+								<a class="dropdown-item" href="#">Policy</a>
+							</li>
+							<div class="dropdown-divider"></div>
+							<li nav-item dropdown>
+								<a class="dropdown-item" href="#">Data</a>
+							</li>
+							<div class="dropdown-divider"></div>
+							<li nav-item dropdown>
+								<a class="dropdown-item" href="#">Broader Impacts</a>
+							</li>
+					</ul>
+				<div class="dropdown-divider"></div>
+				</div>
+			</li>
 			<form class="form-inline">
 				<!-- Actual search box -->
 				<div class="form-group has-search">
@@ -111,7 +243,7 @@
 		<div>
 			{% if user.is_authenticated %}
 			  {% trans "Hi" %} {{ user.username }}!
-			  <p><a href="{% url 'account_logout' %}">Sign Out</a></p>
+			  <p><a href="{% url 'account_logout' %}">{% trans "Sign Out" %}</a></p>
 			{% else %}
 			  <a href="{% url 'account_login' %}">{% trans "Sign In" %}</a> |
 			  <a href="{% url 'account_signup' %}">{% trans "Sign Up" %}</a>
@@ -140,13 +272,13 @@
 				<!-- Collection of nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse justify-content-start">
 					<ul class="nav navbar-nav footer-menu-font">
-						<li class="nav-item"><a href="#" class="nav-link">About us</a></li>
-						<li class="nav-item"><a href="#" class="nav-link">PRESS</a></li>
-						<li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
-						<li class="nav-item"><a href="#" class="nav-link">For Developers-API</a></li>
+						<li class="nav-item"><a href="#" class="nav-link">{% trans "About us" %}</a></li>
+						<li class="nav-item"><a href="#" class="nav-link">{% trans "PRESS" %}</a></li>
+						<li class="nav-item"><a href="#" class="nav-link">{% trans "Contact" %}</a></li>
+						<li class="nav-item"><a href="#" class="nav-link">{% trans "For Developers-API" %}</a></li>
 					</ul>
 					<ul class="nav navbar-nav navbar-right ml-auto">
-						<li class="nav-item d-flex justify-content-center align-items-center"> Follow medborgarforskning.se: </li>
+						<li class="nav-item d-flex justify-content-center align-items-center">{% trans "Follow medborgarforskning.se" %}: </li>
 						<li class="nav-item"><a href="#" class="nav-link">
 							<img class="header-icons" src="{% static 'icons/Facebook_Brands_Icon_4.png' %}"/>
 						</a></li>
@@ -185,24 +317,24 @@
 						<div class="row">
 							<div class="col">
 								<a href="#">
-								Terms of service
+								{% trans "Terms of service" %}
 								</a>
 							</div>
 							<div class="col">
 								<a href="#">
-								Privacy policy
+								{% trans "Privacy policy" %}
 								</a>
 							</div>
 							<div class="col">
 								<a href="#">
-								Cookies policy
+								{% trans "Cookies policy" %}
 								</a>
 							</div>
 						</div>
 					</div>
 					<div class="col-4">
 						<a href="#">
-						Powered by: The ARCS open source platform
+						{% trans "Powered by: The ARCS open source platform" %}
 						</a>
 					</div>
 				</div>
@@ -211,7 +343,7 @@
 						<img id="cc-by" src="{% static 'icons/CC-BY_icon.svg' %}"/>
 					</div>
 					<div class="col-7 policy-footer-font d-flex align-items-center">
-						<p>Except where otherwise <a href="#"> noted,</a> content on this site is licensed under a <a href="#"> Creative Commons Attribution 4.0 International License.</a></p>
+						<p>Except where otherwise <a href="#"> noted, </a> content on this site is licensed under a <a href="#"> Creative Commons Attribution 4.0 International License.</a></p>
 					</div>
 				</div>
 		</div>
