--- a/ArcsSystem/templates/staticpages/static_variant2.html
+++ b/ArcsSystem/templates/staticpages/static_variant2.html
@@ -1,7 +1,7 @@
 
 {% extends 'base.html' %}
 {% load i18n %}
-
+{% load static %}
 {% block content %}
 
 {% load publications_extras %}
@@ -34,6 +34,39 @@
                 </div>
 
             </div>
+            <div class="row">
+                <div class="col">
+                    <div class="accordion">
+                      <div class="accordion__item">
+                        <div class="accordion__item__header" >
+                         Theme 1
+                        </div>
+
+                        <div class="accordion__item__content">
+                          <p> Explain of your item goes here...</p>
+                		 </div>
+                      </div>
+                	        <div class="accordion__item">
+                        <div class="accordion__item__header">
+                         Theme 2
+                        </div>
+
+                        <div class="accordion__item__content">
+                          <p> Explain of your item goes here...</p>
+                		 </div>
+                      </div>
+                	        <div class="accordion__item">
+                        <div class="accordion__item__header">
+                         Theme 3
+                        </div>
+
+                        <div class="accordion__item__content">
+                          <p> Explain of your item goes here...</p>
+                		 </div>
+                      </div>
+                    </div> <!-- id accordion end -->
+                </div>
+            </div>
         </div>
         <div class="col-3">
             <div class="row visual-Mindmap-style">
@@ -60,3 +93,10 @@
 
 {% endautoescape %}
 {% endblock content %}
+
+{% block extra_head %}
+<script src="{% static 'scripts/accordion.js' %}" type="text/javascript"></script>
+    <!-- Accordion CSS -->
+<link rel="stylesheet" href="{% static 'css/accordion_style.css' %}">
+
+{% endblock extra_head %}
