-fix blog detial view display -add comments per class definitions -add dev comment on summernote use implementaiton if shown to user

--- a/ArcsSystem/templates/blog/blog_detail.html
+++ b/ArcsSystem/templates/blog/blog_detail.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 {% load i18n %}
 
 {% block content %}
@@ -6,9 +7,9 @@
 {# this tag will insert a comment in the HMTL, but won't be rendered #}
 
 
+<h1>{{ object.title }}</h1>
 
-<h1>{% trans {{ object.title }} }</h1>
-<p>{% trans {{ object.content }} }</p>
+<p>{{ object.content|safe }}</p>
 
 
 
